# Spring

./: .gitignore  Application.cpp  Application.h  BaseApplication.cpp  BaseApplication.h  CMakeLists.txt  Camera.cpp  Camera.h  Cube.cpp  Cube.h  Engine.cpp  Engine.h  EventHandler.cpp  EventHandler.h  Learning OpenGL.sln  ObjectLoader.cpp  ObjectLoader.h  README.md  Renderer.cpp  Renderer.h  SettingUpOpenGL.sln  SettingUpOpenGL.vcxproj  SettingUpOpenGL.vcxproj.filters  SpinningTriangleModified.cpp  SpringEditor.cpp  VertexData.h  color.h  imgui.ini  main.cpp  stdafx.h  vec3.h
Application/: Application.cpp  Application.h  Cube.cpp  Cube.h  Grid.cpp  Grid.h  Moon.cpp  Moon.h  Square.cpp  Square.h  Tank.cpp  Tank.h  Teaport.cpp  Teaport.h
Assets/: DFS.lua  test.lua
Assets/Shaders/: RndFragmentShader.glsl  RndVertexShader.glsl
Assets/Shaders/Square/: FragmentShader.glsl  VertexShader.glsl
Core/Application/: Application.h  Cube.cpp  Cube.h  Grid.cpp  Grid.h  Moon.cpp  Moon.h  Square.cpp  Square.h  Teaport.cpp
Core/Audio/: WAV.h
Core/Common/: Common.cpp  Common.h
Core/Engine/: Application.cpp  Application.h  BVH.cpp  BVH.h  BaseApplication.cpp  BaseApplication.h  BaseWin32Window.h  BoundingVolume.cpp  BoundingVolume.h  Character.cpp  Character.h  Component.h  ComponentUtils.cpp  ComponentUtils.h  Mesh.cpp  Mesh.h  NGLFWwindow.cpp  NGLFWwindow.h  TextField.h  TimeStep.cpp  TimeStep.h  UUID.cpp  UUID.h  Win32Window.cpp  Win32Window.h  Window.cpp  Window.h
Core/Event/: Event.cpp  Event.h
Core/FontMgr/: FontMgr.cpp  FontMgr.h
Core/Input/: InputDevice.h  KeyBoard.cpp  KeyBoard.h  Mouse.cpp  Mouse.h
Core/Materials/: Material.cpp  Material.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureBase.cpp  TextureBase.h
Core/Physics/: Collider.h  PhysicsEngine.cpp  PhysicsEngine.h  PhysicsState.cpp  PhysicsState.h  Ray.cpp  Ray.h
Core/Primitives/: Bound.h  Grid.cpp  Grid.h  Mesh.cpp  Mesh.h  ParticleSystem.h  Square.cpp  Square.h
Core/Project/: Project.cpp
Core/Rendering/: BufferLayout.cpp  BufferLayout.h  FrameBuffer.cpp  FrameBuffer.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  RenderCommand.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  UniformBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.h
Core/Rendering/LightAndShadow/: PointLight.h
Core/Resources/: AssetManager.cpp  AssetManager.h  ShaderResource.cpp  ShaderResource.h
Core/SceneMgr/: Scene.cpp  Scene.h  SceneEvent.cpp  SceneEvent.h  SceneState.h
Core/Scripting/: Script.cpp  Script.h  ScriptBase.cpp  ScriptBase.h  ScriptMgr.cpp  ScriptMgr.h  ScriptingEngine.cpp  ScriptingEngine.h
Core/Text/: Label.cpp  Label.h  TextField.h
Core/UUID/: UUID.cpp  UUID.h  copyrt.h  global.h  md5.cpp  md5.h  sha1.cpp  sha1.h  sysdep.cpp  sysdep.h
Core/Viewing/: Camera.cpp  Camera.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
Dependencies/ImGuizmo/example/: imgui.ini
Dependencies/MSDF/: CMakeLists.txt
Dependencies/MSDF/artery-font-format/: artery-font-export.cpp
Dependencies/imgui/examples/example_glfw_opengl3/: imgui.ini
Dependencies/imgui/examples/example_win32_directx12/: imgui.ini
Dependencies/imgui/examples/example_win32_directx9/: imgui.ini
Editor/: BaseApplication.cpp  BaseApplication.h  ComponentsPanel.h  ContentBrowserPanel.h  Layer.cpp  Layer.h  MenuBarPanel.h  Panel.h  RenderPanel.h  StatisticsPanel.h  UILayer.cpp  UILayer.h
Editor/Project/: Project.h
Editor/Utility/: ObjectLoader.cpp  ObjectLoader.h  Serializer.cpp  Serializer.h  TinyWrapper.cpp  TinyWrapper.h
Engine/: Application.h  BaseApplication.cpp  BaseApplication.h  Layer.h  ObjectLoader.cpp  TimeStep.h  UILayer.cpp  UILayer.h
Input/: InputDevice.h  KeyBoard.cpp  KeyBoard.h  Mouse.cpp  Mouse.h
LightAndShadow/: PointLight.h
Materials/: Material.cpp  Material.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
Objects/Basic_shapes/: triangle.txt
Rendering/: Cube.cpp  Cube.h  FrameBuffer.cpp  FrameBuffer.h  Grid.cpp  Grid.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Square.cpp  Square.h  VertexArray.cpp  VertexArray.h
Shaders/: FragmentShader.glsl  GeometryShader.glsl  RndFragmentShader.glsl  RndVertexShader.glsl  TessellationControlShader.glsl  TessellationEvaluationShader.glsl  VertexShader.glsl
Shaders/Cube/: FragmentShader.glsl  HemisphereLightingVertexShader.glsl  TessellationControlShader.glsl  TessellationEvaluationShader.glsl  VertexShader.glsl
Shaders/Grid/: FragmentShader.glsl  VertexShader.glsl
Shaders/Square/: FragmentShader.glsl  VertexShader.glsl
Utility/: ObjectLoader.h  Serializer.cpp  Serializer.h
Viewing/: Camera.cpp  Camera.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
